--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,13 @@ body {
     color: blue;
 }
 
+#content img {
+    display: block;
+    width: 80%;
+    height: auto;
+    margin: auto;
+}
+
 @media only screen and (max-width: 800px) {
     #full-window {
         background: #d5e5ed;
